feature_multiple_language_support: string fixes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
@@ -92,7 +92,7 @@
             <Button
                 android:id="@+id/buttonRegister"
                 android:text="@string/register"
-                android:textColor="@drawable/white_color_selector"
+                android:textColor="@color/new_orange"
                 android:layout_width="636px"
                 android:layout_height="112px"
                 android:layout_marginTop="24px"
