feature_multiple_language_support: test app 234

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/string.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/string.xml
@@ -357,7 +357,7 @@
     <string name="view_account">ખાતું જુઓ </string>
     <string name="hint_created_multiple_account">તમે પહેલાથી જ આ ઉપકરણ માં બે એકાઉન્ટ્સ બનાવ્યા છે. એક નવું એકાઉન્ટ બનાવવા માટે કારણ સમજાવો.</string>
     <string name="convenience_charge">સગવડ ચાર્જ </string>
-    <string name="inc_subsidy">સબસીડી ની સાથે </string>
+    <string name="inc_subsidy">(સબસીડી ની સાથે) </string>
     <string name="to_end">માટે </string>
     <string name="Edit_profile">પ્રોફાઈલ એડિટ કરો </string>
     <string name="info">માહિતી </string>
